--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,22 @@
-body { background: black; }
+@import "programs.less"
+html,
+body {
+  min-width: 320px;
+  min-height: 3182px;
+}
+body {
+  margin: 0;
+  padding: 0;
+
+  font-family: "Oswald", "Arial", sans-serif;
+  font-weight: 400;
+  text-transform: none;
+  color: #000000;
+  background-color: #ffffff;
+
+  background-position: top center;
+  background-repeat: no-repeat;
+}
+a {
+  text-decoration: none;
+}
