--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,7 +7,11 @@
 @import "example.less";
 @import "page-footer.less";
 @import "social.less";
-@import "copyright.less";
+@import "main-catalog.less";
+@import "product.less";
+@import "button.less";
+@import "additional.less";
+@import "product-add.less";
 
 html,
 body {
