--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -35,4 +35,26 @@
 }
 .page-footer__copyright {
   margin-left: 20px;
+  outline: 1px solid green;
+  position: relative;
+  min-height: 77px;
+}
+.page-footer__copyright::before {
+  content: "";
+  position: absolute;
+  top: 11px;
+  right: 0px;
+  width: 60px;
+  height: 60px;
+  background-image: url("../img/htmlacademy.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  transform: scale(0.5);
+  outline: 1px solid green;
+}
+.page-footer__copyright-link {
+  background-color: transparent;
+  color: #444444;
+  display: block;
+  padding-top: 31px;
 }
