--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,17 +1,27 @@
 @import "page-header.less";
 @import "main-nav.less";
+
 @import "page-main.less";
 @import "description.less";
 @import "programs.less";
 @import "how-work.less";
 @import "example.less";
+
 @import "page-footer.less";
 @import "social.less";
+
 @import "main-catalog.less";
 @import "product.less";
 @import "button.less";
 @import "additional.less";
 @import "product-add.less";
+
+@import "form-page.less";
+@import "cat.less";
+@import "form-programs.less";
+@import "owner.less";
+@import "comment.less";
+@import "additionally.less";
 
 html,
 body {
