Начинаем вёрстку с препроцессором

--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -24,6 +24,9 @@
   font-size: 14px;
   line-height: 20px;
 }
+.page-footer__map-image {
+  outline: 1px solid red;
+}
 .page-footer__logo {
   display: block;
   outline: 1px solid red;
