--- a/source/less/cat.less
+++ b/source/less/cat.less
@@ -4,8 +4,15 @@
              margin: 0;
              padding: 0;
              height: 45px;
-             width: 228px;
              box-sizing: border-box;
+             margin-bottom: 14px;
+             }
+             label {
+              font-size: 16px;
+              line-height: 18px;
+              text-transform: uppercase;
+              margin-right: 18px;
+              display: inline-block;
              }
 }
 .cat__wrapper {
@@ -18,8 +25,6 @@
 }
 
 .cat__nickname {
-  font-size: 16px;
-  line-height: 18px;
-  text-transform: uppercase;
+
 }
 
