--- a/source/less/form-page.less
+++ b/source/less/form-page.less
@@ -3,6 +3,7 @@
           font-size: 36px;
           line-height: 60px;
           font-weight: 400;
+          text-align: center;
           }
           p {
           font-size: 14px;
