--- a/source/less/style.less
+++ b/source/less/style.less
@@ -32,7 +32,8 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  padding: 0 0;
+  padding: 0 20px;
+  box-sizing: border-box;
 
   font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
