--- a/source/less/how-work.less
+++ b/source/less/how-work.less
@@ -1,14 +1,22 @@
 .how-work {
   outline: 1px solid red;
+  min-height: 447px;
+  padding: 17px 20px;
+  box-sizing: border-box;
 }
 .how-work__title {
+  margin: 0;
+  padding: 0;
   font-size: 36px;
   line-height: 60px;
+  font-weight: 400;
+  margin-bottom: 30px;
 }
 .how-work__list {
   margin: 0;
   padding: 0;
   list-style: none;
+  outline: 1px solid red;
 }
 .how-work__describe {
   font-size: 14px;
@@ -16,7 +24,7 @@
 
   position: relative;
 
-  margin-bottom: 20px;
+  margin-bottom: 28px;
   margin-left: 80px;
   outline: 1px solid red;
 }
