--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -1,18 +1,27 @@
 .page-footer {
   outline: 1px solid red;
-
+  width: 320px;
+  margin: 0 auto;
+  opacity: 0.5;
+  padding: 30px 0;
 }
 .page-footer__data {
+  outline: 1px solid red;
   display: flex;
   margin: 0 20px;
   min-height: 50px;
   justify-content: space-between;
+  margin-bottom: 30px;
 }
 .page-footer__invitation {
+  margin: 0;
+  padding: 0;
   font-weight: 500;
   outline: 1px solid red;
 }
 .page-footer__address {
+  margin: 0;
+  padding: 0;
   outline: 1px solid red;
 }
 .page-footer__invitation {
@@ -24,8 +33,15 @@
   font-size: 14px;
   line-height: 20px;
 }
+.page-footer__map {
+  display: block;
+  background-color: #000000;
+  width: 320px;
+  height: 363px;
+}
 .page-footer__map-image {
   outline: 1px solid red;
+  background-color: rgba(171, 45, 67. 0.7);
 }
 .page-footer__logo {
   display: block;
@@ -37,7 +53,6 @@
   outline: 1px solid green;
 }
 .page-footer__copyright {
-  margin-left: 20px;
   outline: 1px solid green;
   position: relative;
   min-height: 77px;
