--- a/source/less/style.less
+++ b/source/less/style.less
@@ -23,17 +23,16 @@
 @import "comment.less";
 @import "additionally.less";
 
-html,
+@import "variables.less";
+
+
+
+
 body {
-  width: 320px;
-  min-height: 3182px;
-}
-body {
+  display: flex;
+  flex-direction: column;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  padding: 0 20px;
-  box-sizing: border-box;
 
   font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
@@ -43,9 +42,21 @@ body {
 
   background-position: top center;
   background-repeat: no-repeat;
+
+  min-width: 320px;
+
+  background: url("../img/substrate/cat-energy-index-mobile.jpg") no-repeat 50% 0;
+  background-size: 320px auto;
+  min-height: 750px;
+
+  outline: 1px solid red;
 }
 a {
   text-decoration: none;
+}
+img {
+  max-width: 100%;
+  height: auto;
 }
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
@@ -69,3 +80,19 @@ input[type="radio"].visually-hidden {
   color: #ffffff;
   text-decoration: none;
 }
+
+
+@media (min-width: @tablet-width) {
+  body {
+    background: url("../img/substrate/cat-energy-index-tablet.jpg") no-repeat 50% 0;
+    background-size: 768px 4333px;
+  }
+}
+@media (min-width: @desktop-width) {
+  body {
+    background: url("../img/substrate/cat-energy-index-desktop.jpg") no-repeat 50% 0;
+    background-size: 1440px auto;
+  }
+}
+
+
