--- a/source/less/example.less
+++ b/source/less/example.less
@@ -1,9 +1,9 @@
 .example {
   background-color: #f2f2f2;
   outline: 1px solid red;
-  margin-left: -20px;
   padding: 10px 20px;
-  min-width: 320px;
+  box-sizing: border-box;
+  min-height: 705px;
 }
 .example__title {
   margin: 0;
