--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -1,10 +1,25 @@
 .main-nav {
-  align-self: center;
   font-weight: 700;
   font-size: 20px;
   line-height: 20px;
   text-transform: uppercase;
 
+  min-height: 65px;
+  width: 65px;
+  outline: 1px solid black;
+  background-color: pink;
+  opacity: 0.5;
+}
+
+@media (min-width: @tablet-width) {
+  .main-nav {
+  width: 450px;
+  }
+}
+@media (min-width: @desktop-width) {
+  .main-nav {
+  width: 611px;
+  }
 }
 .site-list {
   list-style: none;
@@ -18,6 +33,7 @@
   position: relative;
   width: 24px;
   height: 18px;
+  margin: 22px 21px;
 }
 .main-nav__toggle::before {
   content: "";
