--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -1,6 +1,44 @@
 .page-header {
+  min-height: 65px;
+
   outline: 1px solid red;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
+  min-width: 320px;
+  margin: 0 auto;
 }
+@media (min-width: @tablet-width) {
+  .page-header {
+    min-height: 110px;
+  }
+}
+@media (min-width: @desktop-width) {
+  .page-header {
+  min-height: 125px;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .page-header {
+  width: 704px;
+  }
+}
+@media (min-width: @desktop-width) {
+  .page-header {
+  width: 1220px;
+  }
+}
+.page-header__logo {
+  display: block;
+  width: 230px;
+  min-height: 65px;
+  outline: 1px solid black;
+  background-color: tomato;
+  opacity: 0.5;
+}
+.page-header__logo-image {
+  outline: 1px solid black;
+  margin: 13px 21px;
+}
+
+
