--- a/source/less/page-main.less
+++ b/source/less/page-main.less
@@ -1,4 +1,7 @@
 .page-main {
-  margin: 0;
-  padding: 0;
+  opacity: 0.5;
+  display: flex;
+  flex-direction: column;
+  width: 320px;
+  margin: 0 auto;
 }
