--- a/source/less/button.less
+++ b/source/less/button.less
@@ -3,25 +3,6 @@
   width: 280px;
   height: 40px;
   background-color: #68b738;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 400;
-  text-transform: uppercase;
-
-  padding-top: 10px;
-  padding-bottom: 10px;
-  box-sizing: border-box;
-  text-align: center;
-}
-button {
-  background-color: transparent;
-  border: none;
-}
-.button--gray {
-  display: block;
-  width: 280px;
-  height: 40px;
-  background-color: #68b738;
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
@@ -32,5 +13,13 @@ button {
   padding-bottom: 10px;
   box-sizing: border-box;
   text-align: center;
-  background-color: #f2f2f2;
+
+  border: none;
+  color: #ffffff;
+  text-decoration: none;
+  outline: 1px solid red;
+}
+.button--gray {
+  background-color: gray;
+  color: #000000;
 }
