--- a/source/less/description.less
+++ b/source/less/description.less
@@ -2,27 +2,39 @@
   min-height: 500px;
   position: relative;
   outline: 1px solid black;
-}
-
-@media (min-width: @tablet-width) {
-  .description {
-    min-height: 840px;
-    }
-}
-@media (min-width: @desktop-width) {
-  .description {
-    min-height: 650px;
-  }
+  margin: 0 auto;
 }
 .description {
   content: "";
-
   width: 320px;
   height: 305px;
 
   background-image: url("../img/index-background-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: 0 0;
+}
+@media (min-width: @tablet-width) {
+  .description {
+  background-image: none;
+  width: 710px;
+  height: 840px;
+  }
+}
+@media (min-width: @desktop-width) {
+  .description {
+  width: 1220px;
+  height: 650px;
+  position: relative;
+  .description::after {
+  content: "";
+  position: absolute;
+  width: 720px;
+  height: 696px;
+  background-image: url("../img/index-background-desktop@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  }
+  }
 }
 .description::before {
   content: "";
@@ -38,6 +50,17 @@
   background-position: 0 0;
   z-index: 10;
 }
+@media (min-width: @tablet-width) {
+  .description::before {
+
+  width: 709px;
+  height: 609px;
+
+  background-image: url("../img/index-can-tablet@1x.jpg");
+  z-index: -1;
+  }
+}
+
 .description__title {
   margin: 0;
   padding: 0;
@@ -47,12 +70,26 @@
   color: #ffffff;
   text-align: center;
 }
+@media (min-width: @tablet-width) {
+  .description__title {
+  font-size: 60px;
+  line-height: 60px;
+  color: #000000;
+  }
+}
 .description__paragraph {
   font-size: 14px;
   line-height: 14px;
   color: #ffffff;
   text-align: center;
   text-transform: uppercase;
+}
+@media (min-width: @tablet-width) {
+  .description__paragraph {
+  font-size: 20px;
+  line-height: 20px;
+  color: #000000;
+  }
 }
 .description__link {
   font-size: 14px;
