--- a/source/less/example.less
+++ b/source/less/example.less
@@ -5,6 +5,16 @@
   box-sizing: border-box;
   min-height: 705px;
 }
+@media (min-width: @tablet-width) {
+  .example {
+  min-height: 1080px;
+  }
+}
+@media (min-width: @desktop-width) {
+  .example {
+  min-height: 665px;
+  }
+}
 .example__title {
   margin: 0;
   padding: 0;
