--- a/source/less/how-work.less
+++ b/source/less/how-work.less
@@ -1,8 +1,21 @@
 .how-work {
-  outline: 1px solid red;
+  outline: 1px solid black;
   min-height: 447px;
   padding: 17px 20px;
   box-sizing: border-box;
+}
+@media (min-width: @tablet-width) {
+  .how-work {
+  min-height: 780px;
+  padding: 45px 30px 13px 30px;
+  }
+}
+@media (min-width: @desktop-width) {
+  .how-work {
+  width: 1220px;
+  min-height: 450px;
+  padding: 75px 0px 0px 0px;
+  }
 }
 .how-work__title {
   margin: 0;
@@ -12,11 +25,23 @@
   font-weight: 400;
   margin-bottom: 30px;
 }
+@media (min-width: @tablet-width) {
+  .how-work__title {
+  font-size: 60px;
+  line-height: 60px;
+  margin-bottom: 27px;
+  }
+}
 .how-work__list {
   margin: 0;
   padding: 0;
   list-style: none;
-  outline: 1px solid red;
+}
+@media (min-width: @tablet-width) {
+  .how-work__list {
+  display: flex;
+  flex-wrap: wrap;
+  }
 }
 .how-work__describe {
   font-size: 14px;
@@ -28,6 +53,35 @@
   margin-left: 80px;
   outline: 1px solid red;
 }
+@media (min-width: @tablet-width) {
+  .how-work__describe {
+  width: 247px;
+  height: 228px;
+  outline: 1px solid red;
+  font-size: 16px;
+  line-height: 24px;
+
+  margin-top: 45px;
+  margin-bottom: 45px;
+  margin-left: 0px;
+  margin-right: 135px;
+  }
+  .how-work__describe:nth-child(2n) {
+  margin-right: 0px;
+  }
+}
+@media (min-width: @desktop-width) {
+  .how-work__describe {
+  margin-right: 77px;
+  margin-bottom: 0;
+  }
+  .how-work__describe:nth-child(2n) {
+  margin-right: 77px;
+  }
+  .how-work__describe:nth-child(4n) {
+  margin-right: 0px;
+  }
+}
 .how-work__describe::before {
   content: "";
   top: -3px;
@@ -37,6 +91,14 @@
   background-color: #68b738;
 
   position: absolute;
+}
+@media (min-width: @tablet-width) {
+  .how-work__describe::before {
+  top: 0px;
+  left: 0px;
+  width: 80px;
+  height: 80px;
+  }
 }
 .how-work__describe--foliage::after {
   content: "";
