--- a/source/less/main-catalog.less
+++ b/source/less/main-catalog.less
@@ -1,11 +1,49 @@
+.main-catalog {
+  opacity: 0.5;
+  width: 320px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  outline: 1px solid red;
+  margin-top: 198px;
+  padding: 17px 0;
+}
 .main-catalog h1 {
-  text-align: center;
+  margin: 0;
+  padding: 0;
+  margin-left: 20px;
   font-weight: 400;
   font-size: 36px;
   line-height: 60px;
+  color: green;
+  margin-bottom: 27px;
 }
 .main-catalog__list {
   list-style: none;
   margin: 0;
   padding: 0;
+  margin: 0 22px 0 19px;
+}
+.main-catalog__product-show {
+  min-height: 208px;
+  outline: 1px solid red;
+  padding: 80px 20px 25px 20px;
+  box-sizing: border-box;
+}
+.main-catalog__product-show b {
+  display: block;
+  text-align: center;
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 16px;
+  line-height: 20px;
+}
+.main-catalog__product-show p {
+  margin: 0;
+  padding: 0;
+  margin-top: 7px;
+  margin-bottom: 22px;
+  text-align: center;
+  font-size: 12px;
+  line-height: 16px;
 }
