--- a/source/less/page-main.less
+++ b/source/less/page-main.less
@@ -5,3 +5,13 @@
   width: 320px;
   margin: 0 auto;
 }
+@media (min-width: @tablet-width) {
+  .page-main {
+  width: 768px;
+  }
+}
+@media (min-width: @desktop-width) {
+  .page-main {
+  min-width: 1220px;
+}
+}
