--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,5 +1,16 @@
+@font-face {
+  font-weight: 400;
+  font-family: "Oswald";
+  src: url("../fonts/oswaldmedium.woff") format("woff"),
+  url("../fonts/oswaldmedium.woff2") format("woff2"),
+  url("../fonts/oswaldregular.woff") format("woff"),
+  url("../fonts/oswaldregular.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
 @import "page-header.less";
 @import "main-nav.less";
+@import "site-list.less";
 
 @import "page-main.less";
 @import "description.less";
@@ -24,6 +35,7 @@
 @import "additionally.less";
 
 @import "variables.less";
+@import "visually-hidden.less";
 
 
 
@@ -45,7 +57,7 @@ body {
 
   min-width: 320px;
 
-  background: url("../img/substrate/cat-energy-index-mobile.jpg") no-repeat 50% 0;
+  background: url("../img/substrate/cat-energy-catalog-mobile.jpg")  no-repeat 50% 0;
   background-size: 320px auto;
   min-height: 750px;
 
@@ -58,39 +70,16 @@ img {
   max-width: 100%;
   height: auto;
 }
-.visually-hidden:not(:focus):not(:active),
-input[type="checkbox"].visually-hidden,
-input[type="radio"].visually-hidden {
-  position: absolute;
-
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-
-  white-space: nowrap;
-
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-.button {
-  background-color: #68b738;
-  color: #ffffff;
-  text-decoration: none;
-}
-
 
 @media (min-width: @tablet-width) {
   body {
-    background: url("../img/substrate/cat-energy-index-tablet.jpg") no-repeat 50% 0;
+    background: url("../img/substrate/cat-energy-catalog-tablet.jpg") no-repeat 50% 0;
     background-size: 768px 4333px;
   }
 }
 @media (min-width: @desktop-width) {
   body {
-    background: url("../img/substrate/cat-energy-index-desktop.jpg") no-repeat 50% 0;
+    background: url("../img/substrate/cat-energy-catalog-desktop.jpg") no-repeat 50% 0;
     background-size: 1440px auto;
   }
 }
