--- a/source/less/additional.less
+++ b/source/less/additional.less
@@ -1,4 +1,29 @@
+.additional {
+  min-height: 967px;
+  outline: 1px solid red;
+}
+.additional h2 {
+  margin: 0;
+  padding: 0;
+  margin-top: 28px;
+  margin-bottom: 33px;
+  margin-left: 19px;
+
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 400;
+}
+.additional__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  margin: 0 20px;
+}
 .additional__gift {
+  margin: 0;
+  padding: 0;
   content: "";
   width: 280px;
   height: 289px;
@@ -6,6 +31,9 @@
   background-repeat: no-repeat;
   background-position: 0 0;
   position: relative;
+  margin: 0 auto;
+  margin-top: 40px;
+  outline: 1px solid red;
 }
 .additional__gift::before {
   content: "";
@@ -17,20 +45,4 @@
   background-image: url("../img/icon-gift.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
-}
-.additional h2 {
-  font-size: 24px;
-  line-height: 24px;
-  font-weight: 400;
-}
-.additional__list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-.additional__item h3 {
-  font-size: 16px;
-  line-height: 16px;
-  font-weight: 400;
-  text-transform: uppercase;
 }
