--- a/source/less/main-catalog.less
+++ b/source/less/main-catalog.less
@@ -6,7 +6,14 @@
   margin: 0 auto;
   outline: 1px solid red;
   margin-top: 198px;
-  padding: 17px 0;
+  padding: 17px 0 0 0;
+}
+@media (min-width: @tablet-width) {
+  .main-catalog {
+  margin-top: 0;
+  width: 710px;
+  height: 3460px;
+  }
 }
 .main-catalog h1 {
   margin: 0;
@@ -17,6 +24,14 @@
   line-height: 60px;
   color: green;
   margin-bottom: 27px;
+}
+@media (min-width: @tablet-width) {
+  .main-catalog h1 {
+  margin-top: 13px;
+  margin-left: 0;
+  font-size: 60px;
+  line-height: 60px;
+  }
 }
 .main-catalog__list {
   list-style: none;
