--- a/source/less/product-add.less
+++ b/source/less/product-add.less
@@ -1,4 +1,24 @@
 .product-add {
   border-top: 1px solid #cdcdcd;
   border-bottom: 1px solid #cdcdcd;
+  height: 127px;
+  outline: 1px solid black;
+}
+.product-add h3 {
+  margin: 0;
+  padding: 0;
+  margin-top: 14px;
+  margin-left: 2px;
+  margin-bottom: 15px;
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+.product-add__table {
+  font-size: 14px;
+  line-height: 14px;
+  outline: 1px solid red;
+  margin-bottom: 7px;
+  vertical-align: middle;
 }
