--- a/source/less/main-catalog.less
+++ b/source/less/main-catalog.less
@@ -38,6 +38,17 @@
   margin: 0;
   padding: 0;
   margin: 0 22px 0 19px;
+
+  outline: 1px solid red;
+}
+@media (min-width: @tablet-width) {
+  .main-catalog__list {
+  margin: 0;
+  margin-top: 139px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  }
 }
 .main-catalog__product-show {
   min-height: 208px;
