--- a/source/less/product.less
+++ b/source/less/product.less
@@ -5,6 +5,17 @@
   display: flex;
   flex-direction: column;
 }
+@media (min-width: @tablet-width) {
+  .product {
+  width: 323px;
+  height: 429px;
+  outline: 1px solid black;
+  margin-bottom: 140px;
+  }
+  .product:last-child {
+  margin-bottom: 0;
+  }
+}
 .product__image {
   margin: 0;
   padding: 0;
