--- a/source/less/style.less
+++ b/source/less/style.less
@@ -23,6 +23,7 @@
 
 @import "main-catalog.less";
 @import "product.less";
+@import "product-show.less";
 @import "button.less";
 @import "additional.less";
 @import "product-add.less";
