--- a/source/less/additional.less
+++ b/source/less/additional.less
@@ -2,6 +2,22 @@
   min-height: 967px;
   outline: 1px solid red;
 }
+@media (min-width: @tablet-width) {
+  .additional {
+  min-height: 1085px;
+  }
+}
+@media (min-width: @desktop-width) {
+  .additional {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: space-between;
+  min-height: 565px;
+  }
+}
 .additional h2 {
   margin: 0;
   padding: 0;
@@ -12,6 +28,26 @@
   font-size: 24px;
   line-height: 24px;
   font-weight: 400;
+  outline: 1px solid blue;
+}
+@media (min-width: @tablet-width) {
+  .additional h2 {
+  margin: 0;
+  padding: 0;
+
+  font-size: 36px;
+  line-height: 36px;
+  margin-top: 68px;
+  margin-left: 37px;
+  margin-bottom: 80px;
+  }
+}
+@media (min-width: @desktop-width) {
+  .additional h2 {
+  margin-top: 76px;
+  margin-left: 0;
+  width: 100%;
+  }
 }
 .additional__list {
   list-style: none;
@@ -20,6 +56,18 @@
   display: flex;
   flex-direction: column;
   margin: 0 20px;
+}
+@media (min-width: @tablet-width) {
+  .additional__list {
+  margin: 0;
+  }
+}
+@media (min-width: @desktop-width) {
+  .additional__list {
+  width: 895px;
+  height: 288px;
+  margin: 0;
+  }
 }
 .additional__gift {
   margin: 0;
@@ -35,6 +83,23 @@
   margin-top: 40px;
   outline: 1px solid red;
 }
+@media (min-width: @tablet-width) {
+  .additional__gift {
+  width: 708px;
+  height: 200px;
+  background-image: url("../img/gift-photo-tablet@1x.jpg");
+  margin-top: 70px;
+  }
+}
+@media (min-width: @desktop-width) {
+  .additional__gift {
+  width: 245px;
+  height: 289px;
+  background-image: url("../img/gift-photo-desktop@1x.jpg");
+  margin: 0;
+  }
+}
+
 .additional__gift::before {
   content: "";
   position: absolute;
