--- a/source/less/main-catalog.less
+++ b/source/less/main-catalog.less
@@ -12,7 +12,13 @@
   .main-catalog {
   margin-top: 0;
   width: 710px;
-  height: 3460px;
+
+  }
+}
+@media (min-width: @desktop-width) {
+  .main-catalog {
+  width: 1220px;
+
   }
 }
 .main-catalog h1 {
@@ -33,13 +39,18 @@
   line-height: 60px;
   }
 }
+@media (min-width: @desktop-width) {
+  .main-catalog h1 {
+  margin-top: 46px;
+  }
+}
 .main-catalog__list {
   list-style: none;
   margin: 0;
   padding: 0;
-  margin: 0 22px 0 19px;
+  margin: 0 20px 0 20px;
 
-  outline: 1px solid red;
+  outline: 1px solid blue;
 }
 @media (min-width: @tablet-width) {
   .main-catalog__list {
@@ -50,26 +61,8 @@
   justify-content: space-between;
   }
 }
-.main-catalog__product-show {
-  min-height: 208px;
-  outline: 1px solid red;
-  padding: 80px 20px 25px 20px;
-  box-sizing: border-box;
-}
-.main-catalog__product-show b {
-  display: block;
-  text-align: center;
-  font-weight: 400;
-  text-transform: uppercase;
-  font-size: 16px;
-  line-height: 20px;
-}
-.main-catalog__product-show p {
-  margin: 0;
-  padding: 0;
-  margin-top: 7px;
-  margin-bottom: 22px;
-  text-align: center;
-  font-size: 12px;
-  line-height: 16px;
+@media (min-width: @desktop-width) {
+  .main-catalog__list {
+
+  }
 }
