--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -4,17 +4,22 @@
   margin: 0 auto;
   opacity: 0.5;
   padding: 30px 0;
+  display: flex;
+  flex-direction: column;
 }
 @media (min-width: @tablet-width) {
   .page-footer {
   width: 768px;
   min-height: 747px;
+  padding: 65px 0;
   }
 }
 @media (min-width: @desktop-width) {
   .page-footer {
   width: 1220px;
   min-height: 550px;
+  position: relative;
+  padding: 0;
   }
 }
 .page-footer__data {
@@ -24,6 +29,24 @@
   min-height: 50px;
   justify-content: space-between;
   margin-bottom: 25px;
+}
+@media (min-width: @tablet-width) {
+  .page-footer__data {
+  min-height: 78px;
+  margin-bottom: 58px;
+  }
+}
+@media (min-width: @desktop-width) {
+  .page-footer__data {
+
+  position: absolute;
+  top: 95px;
+  left: -20px;
+  width: 570px;
+  height: 200px;
+  opacity: 1;
+  background-color: black;
+  }
 }
 .page-footer__invitation {
   margin: 0;
@@ -45,20 +68,60 @@
   font-size: 14px;
   line-height: 20px;
 }
+
 .page-footer__map {
   display: block;
   margin-bottom: 35px;
-}
-.page-footer__map-image {
   outline: 1px solid black;
+  content: "";
   opacity: 0.8;
+  width: 318px;
+  height: 361px;
+  background-image: url("../img/time.png");
   background-position: 0 0;
   background-repeat: no-repeat;
  }
+ @media (min-width: @tablet-width) {
+  .page-footer__map {
+  width: 767px;
+  height: 400px;
+  background-image: url("../img/bg-map-tablet@1x.png");
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  margin-bottom: 0;
+  }
+ }
+@media (min-width: @desktop-width) {
+ .page-footer__map {
+  width: 1220px;
+  height: 400px;
+  background-image: url("../img/bg-map-desktop@1x.png");
+  }
+}
 
+
+.page-footer__low {
+  display: flex;
+  flex-direction: column;
+  outline: 2px solid green;
+}
+@media (min-width: @tablet-width) {
+  .page-footer__low {
+  flex-direction: row;
+  padding: 58px 0;
+  height: 150px;
+  box-sizing: border-box;
+  }
+}
+@media (min-width: @desktop-width) {
+  .page-footer__low {
+  justify-content: space-between;
+  }
+}
 .page-footer__logo {
   display: block;
   margin-bottom: 29px;
+  outline: 1px solid red;
 }
 .page-footer__logo-image {
   display: block;
