--- a/source/less/product.less
+++ b/source/less/product.less
@@ -12,7 +12,17 @@
   outline: 1px solid black;
   margin-bottom: 140px;
   }
-  .product:last-child {
+  .product:nth-child(7) {
+  margin-bottom: 0;
+  }
+}
+@media (min-width: @desktop-width) {
+  .product {
+  width: 245px;
+  height: 430px;
+  margin-bottom: 143px;
+  }
+  .product:nth-child(n + 5) {
   margin-bottom: 0;
   }
 }
