--- a/source/less/comment.less
+++ b/source/less/comment.less
@@ -1,17 +1,28 @@
 .comment {
-  min-height: 240px;
+  height: 237px;
   border: none;
   outline: 1px solid red;
   legend {
   font-size: 24px;
   line-height: 24px;
   margin-bottom: 28px;
+  position: relative;
   }
+  legend {
+  position: absolute;
+  }
+  .comment__container {
+    width: 280px;
+    height: 147px;
+    margin: 0 auto;
+    margin-top: 80px;
+    }
   textarea {
-    width: 100%;
-    height: 150px;
+    width: 147px;
+    height: 100%;
     font-size: 16px;
     line-height: 18px;
     text-transform: uppercase;
+    }
   }
 }
