--- a/source/less/form-programs.less
+++ b/source/less/form-programs.less
@@ -1,5 +1,10 @@
 .form-programs {
   border: none;
+  width: 320px;
+  outline: 1px solid red;
+  margin: 0 auto;
+  height: 157px;
+  box-sizing: border-box;
   label {
   font-size: 16px;
   line-height: 18px;
@@ -8,7 +13,7 @@
 }
 .form-programs__wrapper {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   border-top: 1px solid #ededed;
   border-bottom: 1px solid #ededed;
   min-height: 157px
