--- a/source/less/cat.less
+++ b/source/less/cat.less
@@ -1,30 +1,24 @@
 .cat {
   border: none;
-             input {
-             margin: 0;
-             padding: 0;
-             height: 45px;
-             box-sizing: border-box;
-             margin-bottom: 14px;
-             }
-             label {
-              font-size: 16px;
-              line-height: 18px;
-              text-transform: uppercase;
-              margin-right: 18px;
-              display: inline-block;
-             }
-}
-.cat__wrapper {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  outline: 1px solid red;
-}
-
-.cat__nickname {
-
+  outline: 1px solid blue;
+  width: 320px;
+  height: 190px;
+  margin: 0 auto;
+  margin-top: 35px;
+  box-sizing: border-box;
+  input {
+    margin: 0;
+    padding: 0;
+    height: 45px;
+    box-sizing: border-box;
+    margin-bottom: 14px;
+    }
+  label {
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+  margin-right: 18px;
+  display: inline-block;
+  }
 }
 
