--- a/source/less/form-page.less
+++ b/source/less/form-page.less
@@ -1,14 +1,39 @@
 .form-page {
-          h1 {
-          font-size: 36px;
-          line-height: 60px;
-          font-weight: 400;
-          text-align: center;
-          }
-          p {
-          font-size: 14px;
-          line-height: 18px;
-          text-transform: uppercase;
-          }
+  outline: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  opacity: 0.5;
+  h1 {
+    margin: 0;
+    padding: 0;
+    font-size: 36px;
+    line-height: 60px;
+    font-weight: 400;
+
+    width: 320px;
+
+    padding: 0 20px;
+    box-sizing: border-box;
+
+    margin: 0 auto;
+    margin-top: 16px;
+    outline: 1px solid red;
+    color: red;
+    }
+  p {
+    margin: 0;
+    padding: 0;
+    width: 320px;
+    margin: 0 auto;
+    margin-top: 25px;
+    color: green;
+    padding-left: 20px;
+    box-sizing: border-box;
+    font-size: 14px;
+    line-height: 18px;
+    text-transform: uppercase;
+    outline: 1px solid red;
+    }
 }
+
 
