--- a/source/less/owner.less
+++ b/source/less/owner.less
@@ -1,10 +1,21 @@
 .owner {
-  min-height: 240px;
+  height: 200px;
   border: none;
   outline: 1px solid red;
+  position: relative;
+  &__container {
+  margin: 0;
+  padding: 0;
+  width: 280px;
+  height: 102px;
+  outline: 1px solid red;
+  margin: 0 auto;
+  margin-top: 106px;
+  }
   legend {
   font-size: 24px;
   line-height: 24px;
+  position: absolute;
   }
   label {
   font-size: 16px;
