form finish almost

--- a/source/less/cat.less
+++ b/source/less/cat.less
@@ -21,4 +21,19 @@
   display: inline-block;
   }
 }
+@media (min-width: @tablet-width) {
+  .cat {
+    width: 710px;
+    margin-top: 65px;
+    height: 195px;
+  }
+}
+@media (min-width: @desktop-width) {
+  .cat {
+  width: 570px;
+  margin-left: 0;
+  }
+}
+
+
 
