--- a/source/less/form-programs.less
+++ b/source/less/form-programs.less
@@ -11,6 +11,20 @@
   text-transform: uppercase;
   }
 }
+@media (min-width: @tablet-width) {
+  .form-programs {
+  margin-top: 73px;
+  width: 630px;
+  height: 194px;
+  }
+}
+@media (min-width: @desktop-width) {
+  .form-programs {
+  width: 570px;
+  margin-top: 65px;
+  margin-right: 0;
+  }
+}
 .form-programs__wrapper {
   display: flex;
   flex-direction: column;
