--- a/source/less/owner.less
+++ b/source/less/owner.less
@@ -29,3 +29,13 @@
   height: 45px;
   }
 }
+@media (min-width: @tablet-width) {
+  .owner {
+  height: 300px;
+  }
+  .owner__container {
+  margin-top: 185px;
+  width: 634px;
+  height: 124px;
+  }
+}
