--- a/source/less/style.less
+++ b/source/less/style.less
@@ -74,8 +74,8 @@ img {
 
 @media (min-width: @tablet-width) {
   body {
-    background: url("../img/substrate/cat-energy-form-tablet.jpg") no-repeat 50% 0;
-    background-size: 768px 4333px;
+    background: url("../img/substrate/cat-energy-fom-tablet.jpg") no-repeat 50% 0;
+    background-size: 768px auto;
   }
 }
 @media (min-width: @desktop-width) {
