--- a/source/less/additionally.less
+++ b/source/less/additionally.less
@@ -1,8 +1,34 @@
 .additionally {
-  min-height: 360px;
+  height: 377px;
   border: none;
   outline: 1px solid red;
+  position: relative;
+}
+@media (min-width: @tablet-width) {
+  .additionally {
+  height: 430px;
+  }
+}
+.additionally__container {
+  width: 280px;
+  height: 300px;
+  outline: 1px solid black;
+  margin: 0 auto;
+  margin-top: 83px;
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: @tablet-width) {
+  .additionally__container {
+    width: 630px;
+    height: 220px;
+    margin-top: 150px;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
   legend {
+  position: absolute;
   font-size: 24px;
   line-height: 24px;
   }
@@ -12,4 +38,4 @@
   text-transform: uppercase;
   margin-bottom: 15px;
   }
-}
+
