--- a/source/less/form-page.less
+++ b/source/less/form-page.less
@@ -10,21 +10,42 @@
     line-height: 60px;
     font-weight: 400;
 
-    width: 320px;
-
     padding: 0 20px;
     box-sizing: border-box;
 
-    margin: 0 auto;
     margin-top: 16px;
     outline: 1px solid red;
     color: red;
     }
-  p {
+}
+.form-page__start {
+  width: 320px;
+  margin: 0 auto;
+  outline: 1px solid blue;
+}
+@media (min-width: @tablet-width) {
+  .form-page__start {
+  width: 710px;
+  }
+}
+@media (min-width: @desktop-width) {
+  .form-page__start {
+  width: 1220px;
+  margin-top: 35px;
+  }
+}
+@media (min-width: @tablet-width) {
+    .form-page h1 {
+    font-size: 60px;
+    line-height: 60px;
+    padding: 0;
+    margin-top: 28px;
+    }
+}
+
+.form-page p {
     margin: 0;
     padding: 0;
-    width: 320px;
-    margin: 0 auto;
     margin-top: 25px;
     color: green;
     padding-left: 20px;
@@ -34,6 +55,29 @@
     text-transform: uppercase;
     outline: 1px solid red;
     }
+@media (min-width: @tablet-width) {
+  .form-page p {
+  font-size: 20px;
+  line-height: 30px;
+  margin-top: 58px;
+  margin-left: 42px;
+  width: 324px;
+  padding: 0;
+  }
+}
+@media (min-width: @desktop-width) {
+  .form-page p {
+  margin-left: 0;
+  }
+}
+@media (min-width: @desktop-width) {
+  .form-page__first-container {
+    display: flex;
+    justify-content: space-between;
+    width: 1220px;
+    margin: 0 auto;
+    outline: 1px solid black;
+  }
 }
 
 
