закончил с крупными сетками всех страниц

--- a/source/less/additionally.less
+++ b/source/less/additionally.less
@@ -9,6 +9,11 @@
   height: 430px;
   }
 }
+@media (min-width: @desktop-width) {
+  .additionally {
+  height: 385px;
+  }
+}
 .additionally__container {
   width: 280px;
   height: 300px;
@@ -25,6 +30,13 @@
     margin-top: 150px;
     flex-direction: row;
     flex-wrap: wrap;
+  }
+}
+@media (min-width: @desktop-width) {
+  .additionally__container {
+    width: 1220px;
+    height: 150px;
+    margin-top: 160px;
   }
 }
   legend {
