--- a/source/less/comment.less
+++ b/source/less/comment.less
@@ -29,6 +29,12 @@ legend {
   margin-top: 170px;
   }
 }
+@media (min-width: @desktop-width) {
+  .comment__container {
+  width: 1220px;
+
+  }
+}
 textarea {
   width: 100%;
   height: 100%;
