--- a/source/less/owner.less
+++ b/source/less/owner.less
@@ -39,3 +39,13 @@
   height: 124px;
   }
 }
+@media (min-width: @desktop-width) {
+  .owner {
+  height: 215px;
+  }
+  .owner__container {
+  margin-top: 175px;
+  width: 1220px;
+  height: 50px;
+  }
+}
