--- a/source/less/main-catalog.less
+++ b/source/less/main-catalog.less
@@ -4,8 +4,7 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  outline: 1px solid red;
-  margin-top: 198px;
+  outline: 1px solid black;
   padding: 17px 0 0 0;
 }
 @media (min-width: @tablet-width) {
