--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -3,45 +3,104 @@
   font-size: 20px;
   line-height: 20px;
   text-transform: uppercase;
-
-  min-height: 65px;
-  width: 65px;
-  outline: 1px solid black;
-  background-color: pink;
   opacity: 0.5;
+  margin: 0;
+  position: relative;
+  outline: 5px solid green;
 }
-
-@media (min-width: @tablet-width) {
-  .main-nav {
-  width: 450px;
-  }
-}
-@media (min-width: @desktop-width) {
-  .main-nav {
-  width: 611px;
-  }
-}
-
 .main-nav__toggle {
-  outline: 1px solid red;
+  position: absolute;
+
   background-color: transparent;
   border: none;
-  position: relative;
-  width: 24px;
-  height: 18px;
-  margin: 22px 21px;
+  display: block;
+  outline: 1px solid red;
+  top: -42px;
+  right: 20px;
+  background-image: url("../img/icon-mobile-menu.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  cursor: pointer;
 }
-.main-nav__toggle::before {
-  content: "";
-
-  position: absolute;
-  top: 0px;
-  left: 0px;
-
+.main-nav--closed .main-nav__toggle {
   width: 24px;
   height: 18px;
-
   background-image: url("../img/icon-mobile-menu.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
 }
+.main-nav--opened .main-nav__toggle {
+  width: 18px;
+  height: 18px;
+  right: 23px;
+  background-image: url("../img/icon-close.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.main-nav__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+  min-height: 198px;
+  width: 320px;
+  outline: 2px solid black;
+}
+@media (min-width: @tablet-width) {
+  .main-nav__list {
+  width: 440px;
+  display: flex;
+  justify-content: space-between;
+  min-height: 110px;
+  margin: 0;
+  }
+}
+@media (min-width: @desktop-width) {
+  main-nav__list {
+  width:
+  }
+}
+.main-nav__item {
+  outline: 1px solid red;
+  text-align: center;
+  padding-top: 22px;
+  padding-bottom: 24px;
+}
+@media (min-width: @tablet-width) {
+  .main-nav__item a {
+  font-size: 18px;
+  line-height: 25px;
+  }
+}
+@media (min-width: @desktop-width) {
+  .main-nav__item a {
+  font-size: 20px;
+  line-height: 25px;
+  color: blue;
+  }
+}
+
+
+
+@media (max-width: @mobile-width-only) {
+  .main-nav--closed .main-nav__list {
+    display: none;
+  }
+}
+.main-nav--nojs  .main-nav__list {
+  display: block;
+}
+.main-nav--nojs  .main-nav__toggle {
+  display: none;
+}
+
+
+
+@media (min-width: @tablet-width) {
+  .main-nav__toggle {
+  display: none;
+  }
+}
+
+
