--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -27,7 +27,7 @@
   width: 230px;
   min-height: 65px;
   outline: 1px solid black;
-  background-color: tomato;
+  background-color: blue;
   opacity: 0.5;
 }
 .page-header__logo-image {
