--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,13 +1,4 @@
-@font-face {
-  font-weight: 400;
-  font-family: "Oswald";
-  src: url("../fonts/oswaldregular.woff") format("woff"),
-  url("../fonts/oswaldregular.woff2") format("woff2"),
-  url("../fonts/oswaldmedium.woff") format("woff"),
-  url("../fonts/oswaldmedium.woff2") format("woff2");
-  font-weight: normal;
-  font-style: normal;
-}
+
 
 @import "page-header.less";
 @import "main-nav.less";
@@ -38,7 +29,21 @@
 @import "variables.less";
 @import "visually-hidden.less";
 
+@font-face {
+  font-weight: normal;
+  font-family: "Oswald";
+  font-style: normal;
+  src: url("../fonts/oswaldregular.woff") format("woff"),
+  url("../fonts/oswaldregular.woff2") format("woff2");
+}
 
+@font-face {
+  font-weight: bold;
+  font-family: "Oswald";
+  font-style: normal;
+  src: url("../fonts/oswaldmedium.woff") format("woff"),
+  url("../fonts/oswaldmedium.woff2") format("woff2");
+}
 
 
 body {
@@ -58,7 +63,7 @@ body {
 
   min-width: 320px;
 
-  background: url("../img/substrate/cat-energy-inex-mobile.jpg")  no-repeat 50% 0;
+  background: url("../img/substrate/cat-energy-index-mobile.jpg")  no-repeat 50% 0;
   background-size: 320px auto;
   min-height: 750px;
 
