выранивание после крупных сеток

--- a/source/less/description.less
+++ b/source/less/description.less
@@ -1,7 +1,6 @@
 .description {
   min-height: 500px;
   position: relative;
-  outline: 1px solid black;
   margin: 0 auto;
 }
 .description {
@@ -39,7 +38,7 @@
 .description::before {
   content: "";
   position: absolute;
-  top: 170px;
+  top: 168px;
   left: 20px;
 
   width: 280px;
@@ -64,6 +63,7 @@
 .description__title {
   margin: 0;
   padding: 0;
+  margin-top: 28px;
   font-size: 36px;
   line-height: 36px;
   font-weight: 400;
@@ -83,6 +83,7 @@
   color: #ffffff;
   text-align: center;
   text-transform: uppercase;
+  margin-top: 24px;
 }
 @media (min-width: @tablet-width) {
   .description__paragraph {
@@ -98,8 +99,10 @@
   outline: 1px red solid;
   display: inline-block;
   vertical-align: top;
-  margin-top: 300px;
+
   text-align: center;
   padding: 11px 73px;
+  margin: 0 auto;
+  margin-top: 303px;
 }
 
