--- a/source/less/programs.less
+++ b/source/less/programs.less
@@ -1,4 +1,5 @@
 .programs {
+  padding-top: 3px;
   min-height: 552px;
   outline: 1px solid green;
   display: flex;
@@ -26,14 +27,19 @@
   margin-bottom: 20px;
   }
   &__title {
+  margin: 0;
+  padding: 0;
   font-size: 24px;
   line-height: 37px;
-  font-weight: 400;
+  font-weight: normal;
   text-transform: uppercase;
+  margin-top: 10px;
+  margin-left: 71px;
   }
   &__description {
   font-size: 14px;
   line-height: 18px;
+  font-weight: normal;
   }
   &__link {
   font-size: 16px;
