--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,12 +1,16 @@
 @font-face {
-  font-weight: 400;
-  font-family: "Oswald";
-  src: url("../fonts/oswaldregular.woff") format("woff"),
-  url("../fonts/oswaldregular.woff2") format("woff2"),
-  url("../fonts/oswaldmedium.woff") format("woff"),
-  url("../fonts/oswaldmedium.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
+  font-family: "Oswald";
+  src: url("../fonts/oswaldregular.woff") format("woff"),
+  url("../fonts/oswaldregular.woff2") format("woff2");
+  }
+@font-face {
+  font-weight: bold;
+  font-style: normal;
+  font-family: "Oswald";
+  src: url("../fonts/oswaldmedium.woff") format("woff"),
+  url("../fonts/oswaldmedium.woff2") format("woff2");
 }
 
 @import "page-header.less";
@@ -58,7 +62,7 @@ body {
 
   min-width: 320px;
 
-  background: url("../img/substrate/cat-energy-inex-mobile.jpg")  no-repeat 50% 0;
+  background: url("../img/substrate/cat-energy-index-mobile.jpg")  no-repeat 50% 0;
   background-size: 320px auto;
   min-height: 750px;
 
