--- a/source/less/button.less
+++ b/source/less/button.less
@@ -4,9 +4,9 @@
   height: 40px;
   background-color: #68b738;
   font-family: "Oswald", "Arial", sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: normal;
   text-transform: uppercase;
 
   padding-top: 10px;
