--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -6,7 +6,6 @@
   opacity: 0.5;
   margin: 0;
   position: relative;
-  outline: 5px solid green;
 }
 .main-nav__toggle {
   position: absolute;
@@ -14,7 +13,6 @@
   background-color: transparent;
   border: none;
   display: block;
-  outline: 1px solid red;
   top: -42px;
   right: 20px;
   background-image: url("../img/icon-mobile-menu.svg");
@@ -45,8 +43,11 @@
 
   min-height: 198px;
   width: 320px;
-  outline: 2px solid black;
+  & a {
+  color: #000000;
+  }
 }
+
 @media (min-width: @tablet-width) {
   .main-nav__list {
   width: 440px;
@@ -56,16 +57,12 @@
   margin: 0;
   }
 }
-@media (min-width: @desktop-width) {
-  main-nav__list {
-  width:
-  }
-}
 .main-nav__item {
-  outline: 1px solid red;
   text-align: center;
   padding-top: 22px;
-  padding-bottom: 24px;
+  padding-bottom: 22px;
+  border-top: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
 }
 @media (min-width: @tablet-width) {
   .main-nav__item a {
