выровнили до индекса слайдера

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -21,6 +21,7 @@
 @import "programs.less";
 @import "how-work.less";
 @import "example.less";
+@import "slider.less";
 
 @import "page-footer.less";
 @import "social.less";
