--- a/source/less/index-main/example.less
+++ b/source/less/index-main/example.less
@@ -42,6 +42,8 @@
   margin: 0;
   padding: 0;
   margin-top: 29px;
+  outline: 1px solid red;
+
 }
 .example__indicators b {
   font-size: 24px;
@@ -57,11 +59,13 @@
   height: 54px;
   border: 1px solid #cfcfcf;
   border-radius: 3px;
+
 }
 .example__indicators small {
   font-size: 17px; /* измененный шрифт, должно быть 12*/
   line-height: 12px;
   text-transform: lowercase;
+  outline: 1px solid blue;
   display: block;
   width: 87px;
   min-height: 30px;
@@ -69,7 +73,6 @@
   margin-left: 18px;
   text-align: center;
   z-index: 5;
-  background-color: #ffffff;
 }
 .example__cost {
   font-size: 14px;
@@ -80,6 +83,5 @@
   text-transform: uppercase;
   display: block;
   text-align: center;
-  outline: 1px solid green;
 }
 
