--- a/source/less/programs.less
+++ b/source/less/programs.less
@@ -22,9 +22,45 @@
   padding: 20px;
   box-sizing: border-box;
   outline: 1px solid red;
+  position: relative;
   }
   &__item:first-child {
   margin-bottom: 20px;
+  }
+  &__item::before {
+    position: absolute;
+    top: 24px;
+    left: 22px;
+    content: "";
+    width: 50px;
+    height: 50px;
+    background-color: @bg-green;
+    border-radius: 50%;
+    outline: 1px solid red;
+  }
+  &__item--slim::after {
+    position: absolute;
+    top: -2px;
+    left: 12px;
+    content: "";
+    width: 70px;
+    height: 97px;
+    background-image: url("../img/icon-cat-slim.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    transform: scale(0.5);
+  }
+    &__item--weight::after {
+    position: absolute;
+    top: 22px;
+    left: -20px;
+    content: "";
+    width: 134px;
+    height: 56px;
+    background-image: url("../img/icon-cat-pro.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    transform: scale(0.5);
   }
   &__title {
   margin: 0;
