--- a/source/less/description.less
+++ b/source/less/description.less
@@ -51,9 +51,11 @@
 }
 @media (min-width: @tablet-width) {
   .description::before {
-
+  top: 232px;
+  left: 0;
   width: 709px;
   height: 609px;
+  outline: 1px solid red;
 
   background-image: url("../img/index-can-tablet@1x.jpg");
   z-index: -1;
@@ -75,6 +77,11 @@
   font-size: 60px;
   line-height: 60px;
   color: #000000;
+  width: 450px;
+  margin-top: 30px;
+  text-align: left;
+  margin-left: 88px;
+  outline: 1px solid red;
   }
 }
 .description__paragraph {
@@ -90,6 +97,9 @@
   font-size: 20px;
   line-height: 20px;
   color: #000000;
+  margin-top: 41px;
+  text-align: left;
+  margin-left: 89px;
   }
 }
 .description__link {
@@ -104,5 +114,16 @@
   padding: 11px 73px;
   margin: 0 auto;
   margin-top: 303px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+    font-size: 20px;
+    line-height: 20px;
+    margin-top: 28px;
+    margin-left: 90px;
+    background-color: @bg-green;
+    color: #ffffff;
+    padding: 16px 29px 16px 25px;
+  }
 }
 
