--- a/source/less/example.less
+++ b/source/less/example.less
@@ -82,4 +82,10 @@
   text-align: center;
   outline: 1px solid green;
 }
+.example__toggles {
+  display: flex;
+  margin-top: 40px;
+  outline: 1px solid red;
+}
+
 
