--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -40,6 +40,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  outline: 1px solid red;
 
   min-height: 198px;
   width: 320px;
@@ -50,11 +51,13 @@
 
 @media (min-width: @tablet-width) {
   .main-nav__list {
-  width: 440px;
+  width: 439px;
   display: flex;
   justify-content: space-between;
   min-height: 110px;
   margin: 0;
+  margin-right: 2px;
+
   }
 }
 .main-nav__item {
@@ -63,11 +66,15 @@
   padding-bottom: 22px;
   border-top: 1px solid #e6e6e6;
   border-bottom: 1px solid #e6e6e6;
+  outline: 1px solid red;
 }
 @media (min-width: @tablet-width) {
   .main-nav__item a {
   font-size: 18px;
   line-height: 25px;
+  font-weight: normal;
+  display: block;
+  margin-top: 18px;
   }
 }
 @media (min-width: @desktop-width) {
