--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -6,6 +6,7 @@
   justify-content: space-between;
   min-width: 320px;
   margin: 0 auto;
+  outline: 1px solid red;
 }
 @media (min-width: @tablet-width) {
   .page-header {
@@ -26,10 +27,27 @@
   width: 230px;
   min-height: 65px;
   opacity: 0.5;
+  outline: 1px solid red;
+  position: relative;
 }
-.page-header__logo-image {
-  margin-top: 13px;
-  margin-left: 21px;
+.page-header__logo::before {
+  content: "";
+  position: absolute;
+  top: 13px;
+  left: 21px;
+  width: 190px;
+  height: 38px;
+  background-image: url("../img/logo-mobile.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+
+  @media (min-width: @tablet-width) {
+  background-image: url("../img/logo-tablet.svg");
+  top: 24px;
+  left: 2px;
+  width: 173px;
+  height: 58px;
+  }
 }
 
 
