--- a/source/less/programs.less
+++ b/source/less/programs.less
@@ -4,15 +4,20 @@
   outline: 1px solid green;
   display: flex;
   flex-direction: column;
-  &__list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
+
+  @media (min-width: @tablet-width) {
+  min-height: 773px;
   }
-  &__item {
+}
+.programs__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+.programs__item {
   margin: 0;
   padding: 0;
   width: 280px;
@@ -23,46 +28,55 @@
   box-sizing: border-box;
   outline: 1px solid red;
   position: relative;
+
+  @media (min-width: @tablet-width) {
+    width: 708px;
+    height: 370px;
   }
-  &__item:first-child {
+}
+.programs__item:first-child {
   margin-bottom: 20px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 30px;
   }
-  &__item::before {
-    position: absolute;
-    top: 24px;
-    left: 22px;
-    content: "";
-    width: 50px;
-    height: 50px;
-    background-color: @bg-green;
-    border-radius: 50%;
-    outline: 1px solid red;
-  }
-  &__item--slim::after {
-    position: absolute;
-    top: -2px;
-    left: 12px;
-    content: "";
-    width: 70px;
-    height: 97px;
-    background-image: url("../img/icon-cat-slim.svg");
-    background-repeat: no-repeat;
-    background-position: 0 0;
-    transform: scale(0.5);
-  }
-    &__item--weight::after {
-    position: absolute;
-    top: 22px;
-    left: -20px;
-    content: "";
-    width: 134px;
-    height: 56px;
-    background-image: url("../img/icon-cat-pro.svg");
-    background-repeat: no-repeat;
-    background-position: 0 0;
-    transform: scale(0.5);
-  }
-  &__title {
+}
+.programs__item::before {
+  position: absolute;
+  top: 24px;
+  left: 22px;
+  content: "";
+  width: 50px;
+  height: 50px;
+  background-color: @bg-green;
+  border-radius: 50%;
+  outline: 1px solid red;
+}
+.programs__item--slim::after {
+  position: absolute;
+  top: -2px;
+  left: 12px;
+  content: "";
+  width: 70px;
+  height: 97px;
+  background-image: url("../img/icon-cat-slim.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  transform: scale(0.5);
+}
+.programs__item--weight::after {
+  position: absolute;
+  top: 22px;
+  left: -20px;
+  content: "";
+  width: 134px;
+  height: 56px;
+  background-image: url("../img/icon-cat-pro.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  transform: scale(0.5);
+}
+.programs__title {
   margin: 0;
   padding: 0;
   font-size: 24px;
@@ -71,8 +85,13 @@
   text-transform: uppercase;
   margin-top: 10px;
   margin-left: 71px;
+
+  @media (min-width: @tablet-width) {
+  font-size: 36px;
+  line-height: 37px;
   }
-  &__description {
+}
+.programs__description {
   font-size: 14px;
   line-height: 18px;
   font-weight: normal;
@@ -80,8 +99,8 @@
   margin-top: 30px;
   outline: 1px solid red;
   position: relative;
-  }
-  &__description::before {
+}
+.programs__description::before {
   content: "";
   width: 240px;
   height: 1px;
@@ -89,8 +108,8 @@
   top: 112px;
   left: 0;
   background-color: #d9d9d9;
-  }
-  &__link {
+}
+.programs__link {
   font-size: 16px;
   line-height: 16px;
   text-transform: uppercase;
@@ -99,8 +118,8 @@
   display: block;
   margin-top: 43px;
   position: relative;
-  }
-  &__link::before {
+}
+.programs__link::before {
   content: "";
   width: 25px;
   height: 11px;
@@ -110,23 +129,10 @@
   background-image: url("../img/icon-right-arrow-long.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
-  }
-
 }
 
 
-@media (min-width: @tablet-width) {
-  .programs {
-  min-height: 773px;
-            &__item {
-              width: 708px;
-              height: 372px;
-            }
-            &__item:first-child {
-            margin-bottom: 30px;
-            }
-  }
-}
+
 @media (min-width: @desktop-width) {
   .programs {
   min-height: 370px;
