--- a/source/less/example.less
+++ b/source/less/example.less
@@ -7,6 +7,7 @@
 
   @media (min-width: @tablet-width) {
     min-height: 1080px;
+    padding: 36px 30px;
   }
 
   @media (min-width: @desktop-width) {
@@ -22,6 +23,10 @@
   margin-top: 6px;
   color: green;
   outline: 1px solid red;
+
+  @media (min-width: @tablet-width) {
+    font-size: 60px;
+  }
 }
 .example__history {
   margin: 0;
@@ -31,12 +36,33 @@
   margin-top: 23px;
   margin-right: 30px;
   outline: 1px solid red;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+    margin-top: 62px;
+    width: 500px;
+  }
 }
+
+@media (min-width: @tablet-width) {
+  .example__preface {
+    outline: 1px solid red;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
 .example__indicators {
   position: relative;
   outline: 1px solid red;
   display: flex;
   justify-content: space-between;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 25px;
+    width: 367px;
+  }
 }
 .example__indicators p {
   margin: 0;
@@ -57,6 +83,13 @@
   height: 54px;
   border: 1px solid #cfcfcf;
   border-radius: 3px;
+
+  @media (min-width: @tablet-width) {
+    width: 162px;
+    height: 72px;
+    font-size: 30px;
+    line-height: 37px;
+  }
 }
 .example__indicators small {
   font-size: 17px; /* измененный шрифт, должно быть 12*/
@@ -70,6 +103,15 @@
   text-align: center;
   z-index: 5;
   background-color: #ffffff;
+  outline: 1px solid red;
+
+  @media (min-width: @tablet-width) {
+    font-size: 14px;
+    line-height: 14px;
+    width: 124px;
+    padding: 0 9px;
+    box-sizing: border-box;
+  }
 }
 .example__cost {
   font-size: 14px;
@@ -81,6 +123,15 @@
   display: block;
   text-align: center;
   outline: 1px solid green;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 29px;
+    text-align: right;
+    font-weight: bold;
+    width: 180px;
+    margin-top: 60px;
+  }
 }
 .example__toggles {
   display: flex;
