--- a/source/less/how-work.less
+++ b/source/less/how-work.less
@@ -3,18 +3,16 @@
   min-height: 447px;
   padding: 17px 20px;
   box-sizing: border-box;
-}
-@media (min-width: @tablet-width) {
-  .how-work {
-  min-height: 780px;
-  padding: 45px 30px 13px 30px;
+
+  @media (min-width: @tablet-width) {
+    min-height: 780px;
+    padding: 43px 30px 13px 30px;
   }
-}
-@media (min-width: @desktop-width) {
-  .how-work {
-  width: 1220px;
-  min-height: 450px;
-  padding: 75px 0px 0px 0px;
+
+  @media (min-width: @desktop-width) {
+    width: 1220px;
+    min-height: 450px;
+    padding: 75px 0px 0px 0px;
   }
 }
 .how-work__title {
@@ -24,23 +22,21 @@
   line-height: 60px;
   font-weight: 400;
   margin-bottom: 30px;
-}
-@media (min-width: @tablet-width) {
-  .how-work__title {
-  font-size: 60px;
-  line-height: 60px;
-  margin-bottom: 27px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 27px;
   }
 }
 .how-work__list {
   margin: 0;
   padding: 0;
   list-style: none;
-}
-@media (min-width: @tablet-width) {
-  .how-work__list {
-  display: flex;
-  flex-wrap: wrap;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
   }
 }
 .how-work__describe {
@@ -52,99 +48,164 @@
   margin-bottom: 27px;
   margin-left: 80px;
   outline: 1px solid red;
-}
-@media (min-width: @tablet-width) {
-  .how-work__describe {
-  width: 247px;
-  height: 228px;
-  outline: 1px solid red;
-  font-size: 16px;
-  line-height: 24px;
 
-  margin-top: 45px;
-  margin-bottom: 45px;
-  margin-left: 0px;
-  margin-right: 135px;
+  @media (min-width: @tablet-width) {
+    width: 247px;
+    height: 228px;
+    outline: 1px solid red;
+    font-size: 16px;
+    line-height: 24px;
+
+    margin-top: 45px;
+    margin-bottom: 45px;
+    margin-left: 0px;
+    margin-right: 137px;
+    padding-top: 110px;
+    box-sizing: border-box;
   }
-  .how-work__describe:nth-child(2n) {
-  margin-right: 0px;
+
+  @media (min-width: @desktop-width) {
+    margin-right: 77px;
+    margin-bottom: 0;
   }
 }
+
+.how-work__describe:nth-child(2n) {
+  @media (min-width: @tablet-width) {
+    margin-right: 0px;
+  }
+  @media (min-width: @desktop-width) {
+    margin-right: 77px;
+  }
+}
+
 @media (min-width: @desktop-width) {
-  .how-work__describe {
-  margin-right: 77px;
-  margin-bottom: 0;
-  }
-  .how-work__describe:nth-child(2n) {
-  margin-right: 77px;
-  }
   .how-work__describe:nth-child(4n) {
-  margin-right: 0px;
-  }
-}
-.how-work__describe::before {
-  content: "";
-  top: -2px;
-  left: -80px;
-  width: 60px;
-  height: 60px;
-  background-color: #68b738;
-
-  position: absolute;
-}
-@media (min-width: @tablet-width) {
-  .how-work__describe::before {
-  top: 0px;
-  left: 0px;
-  width: 80px;
-  height: 80px;
+    margin-right: 0px;
   }
 }
 .how-work__describe--foliage::after {
   content: "";
   position: absolute;
-  top: 3px;
-  left: -75px;
-  width: 50px;
-  height: 50px;
+  top: -2px;
+  left: -80px;
+  width: 60px;
+  height: 60px;
   background-image: url("../img/advantage-leaf@1x.png");
-  background-position: 0 0;
+  background-position: 5px 5px;
   background-repeat: no-repeat;
+  background-color: @bg-green;
   z-index: 10;
+  outline: 1px solid red;
+
+  @media (min-width: @tablet-width) {
+    top: 0;
+    left: 0;
+    width: 80px;
+    height: 80px;
+    background-position: 15px 15px;
+  }
 }
 .how-work__describe--powder::after {
   content: "";
   position: absolute;
-  top: 3px;
-  left: -75px;
-  width: 50px;
-  height: 50px;
+  top: -2px;
+  left: -80px;
+  width: 60px;
+  height: 60px;
   background-image: url("../img/powder.png");
-  background-position: 0 0;
+  background-position: 5px 5px;
   background-repeat: no-repeat;
   z-index: 10;
+  outline: 1px solid red;
+
+  @media (min-width: @tablet-width) {
+    top: 0;
+    left: 0;
+    width: 80px;
+    height: 80px;
+    background-position: 15px 15px;
+  }
 }
 .how-work__describe--fork::after {
   content: "";
   position: absolute;
-  top: 3px;
-  left: -75px;
-  width: 50px;
-  height: 50px;
+  top: -2px;
+  left: -80px;
+  width: 60px;
+  height: 60px;
   background-image: url("../img/advantage-dining@1x.png");
-  background-position: 0 0;
+  background-position: 5px 5px;
   background-repeat: no-repeat;
   z-index: 10;
+  outline: 1px solid red;
+
+  @media (min-width: @tablet-width) {
+    top: 0;
+    left: 0;
+    width: 80px;
+    height: 80px;
+    background-position: 15px 15px;
+  }
 }
 .how-work__describe--scales::after {
   content: "";
   position: absolute;
-  top: 3px;
-  left: -75px;
-  width: 50px;
-  height: 50px;
+  top: -2px;
+  left: -80px;
+  width: 60px;
+  height: 60px;
   background-image: url("../img/advantage-clock@1x.png");
-  background-position: 0 0;
+  background-position: 5px 5px;
   background-repeat: no-repeat;
   z-index: 10;
+  outline: 1px solid red;
+
+  @media (min-width: @tablet-width) {
+    top: 0;
+    left: 0;
+    width: 80px;
+    height: 80px;
+    background-position: 15px 15px;
+  }
+}
+
+@media (min-width: @tablet-width)  {
+  .how-work__describe::before {
+    position: absolute;
+    content: "";
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    outline: 1px solid red;
+    z-inndex: -10;
+  }
+  .how-work__describe--foliage::before {
+    top: 0px;
+    left: 127px;
+    width: 71px;
+    height: 228px;
+    background-image: url("../img/first.png");
+  }
+  .how-work__describe--powder::before {
+    top: 0px;
+    left: 127px;
+    width: 114px;
+    height: 228px;
+    background-image: url("../img/second.png");
+  }
+  .how-work__describe--fork::before {
+    top: 0px;
+    left: 127px;
+    width: 113px;
+    height: 228px;
+    background-image: url("../img/third.png");
+  }
+  .how-work__describe--scales::before {
+    top: 0px;
+    left: 127px;
+    width: 121px;
+    height: 228px;
+    background-image: url("../img/fourth.png");
+  }
+
 }
