--- a/source/less/how-work.less
+++ b/source/less/how-work.less
@@ -116,6 +116,7 @@
   background-image: url("../img/powder.png");
   background-position: 5px 5px;
   background-repeat: no-repeat;
+  background-color: @bg-green;
   z-index: 10;
   outline: 1px solid red;
 
@@ -137,6 +138,7 @@
   background-image: url("../img/advantage-dining@1x.png");
   background-position: 5px 5px;
   background-repeat: no-repeat;
+  background-color: @bg-green;
   z-index: 10;
   outline: 1px solid red;
 
@@ -158,6 +160,7 @@
   background-image: url("../img/advantage-clock@1x.png");
   background-position: 5px 5px;
   background-repeat: no-repeat;
+  background-color: @bg-green;
   z-index: 10;
   outline: 1px solid red;
 
