--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -2,7 +2,7 @@
   outline: 1px solid red;
   width: 320px;
   margin: 0 auto;
-  opacity: 0.5;
+  opacity: 1;
   padding: 28px 0;
   display: flex;
   flex-direction: column;
@@ -10,7 +10,6 @@
 @media (min-width: @tablet-width) {
   .page-footer {
   width: 768px;
-  min-height: 747px;
   padding: 65px 0;
   }
 }
@@ -33,7 +32,7 @@
   @media (min-width: @tablet-width) {
     min-height: 78px;
     margin: 0 71px;
-    margin-bottom: 58px;
+    margin-bottom: 56px;
   }
 }
 @media (min-width: @desktop-width) {
@@ -85,28 +84,30 @@
   margin-bottom: 40px;
   outline: 1px solid black;
   content: "";
-  opacity: 0.4;
   width: 318px;
   height: 361px;
   background-image: url("../img/time.png");
   background-position: 0 0;
   background-repeat: no-repeat;
- }
- @media (min-width: @tablet-width) {
-  .page-footer__map {
-  width: 767px;
-  height: 400px;
-  background-image: url("../img/bg-map-tablet@1x.png");
-  background-position: 0 0;
-  background-repeat: no-repeat;
-  margin-bottom: 0;
+
+  @media (min-width: @tablet-width) {
+    background-image: none;
+
+    content: "";
+    width: 767px;
+    height: 400px;
+    background-image: url("../img/bg-map-tablet@1x.png");
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    margin-bottom: 0;
+
+
   }
- }
-@media (min-width: @desktop-width) {
- .page-footer__map {
-  width: 1220px;
-  height: 400px;
-  background-image: url("../img/bg-map-desktop@1x.png");
+
+  @media (min-width: @desktop-width) {
+    width: 1220px;
+    height: 400px;
+    background-image: url("../img/bg-map-desktop@1x.png");
   }
 }
 
@@ -115,34 +116,47 @@
   display: flex;
   flex-direction: column;
   outline: 2px solid green;
-}
-@media (min-width: @tablet-width) {
-  .page-footer__low {
-  flex-direction: row;
-  padding: 58px 0;
-  height: 150px;
-  box-sizing: border-box;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+    padding: 58px 0;
+    height: 150px;
+    box-sizing: border-box;
+  }
+
+  @media (min-width: @desktop-width) {
+    justify-content: space-between;
   }
 }
-@media (min-width: @desktop-width) {
-  .page-footer__low {
-  justify-content: space-between;
-  }
-}
+
 .page-footer__logo {
   display: block;
   margin-bottom: 31px;
-  outline: 1px solid red;
+  outline: 1px solid blue;
+  width: 128px;
+  height: 24px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 3px;
+    margin-left: 31px;
+    margin-right: 150px;
+  }
 }
 .page-footer__logo-image {
   display: block;
   margin: 0 auto;
+  outline: 1px solid red;
 }
 .page-footer__copyright {
   position: relative;
   min-height: 77px;
   margin: 0 20px;
   outline: 1px solid red;
+
+  @media (min-width: @tablet-width) {
+    min-height: 0;
+    margin-left: 140px;
+  }
 }
 .page-footer__copyright::before {
   content: "";
@@ -156,6 +170,11 @@
   background-position: 0 0;
   transform: scale(0.7);
   outline: 1px solid green;
+
+  @media (min-width: @tablet-width) {
+    top: -15px;
+    right: -77px;
+  }
 }
 .page-footer__copyright-link {
   background-color: transparent;
@@ -167,4 +186,9 @@
   font-weight: normal;
   transform: scaleX(1.35);
   ouline: 1px solid green;
+
+  @media (min-width: @tablet-width) {
+    padding: 0;
+    margin: 0;
+  }
 }
