--- a/source/less/how-work.less
+++ b/source/less/how-work.less
@@ -28,6 +28,9 @@
     line-height: 60px;
     margin-bottom: 27px;
   }
+  @media (min-width: @desktop-width) {
+    margin-bottom: 25px;
+  }
 }
 .how-work__list {
   margin: 0;
@@ -37,6 +40,9 @@
   @media (min-width: @tablet-width) {
     display: flex;
     flex-wrap: wrap;
+  }
+  @media (min-width: @desktop-width) {
+    justify-content: space-between;
   }
 }
 .how-work__describe {
@@ -50,7 +56,7 @@
   outline: 1px solid red;
 
   @media (min-width: @tablet-width) {
-    width: 247px;
+    width: 245px;
     height: 228px;
     outline: 1px solid red;
     font-size: 16px;
@@ -65,7 +71,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-right: 77px;
+    margin-right: 78px;
     margin-bottom: 0;
   }
 }
@@ -74,16 +80,14 @@
   @media (min-width: @tablet-width) {
     margin-right: 0px;
   }
-  @media (min-width: @desktop-width) {
-    margin-right: 77px;
-  }
 }
 
 @media (min-width: @desktop-width) {
-  .how-work__describe:nth-child(4n) {
-    margin-right: 0px;
+  .how-work__describe {
+  margin-right: 0px;
   }
 }
+
 .how-work__describe--foliage::after {
   content: "";
   position: absolute;
